file(GLOB HEADER_FILES "ortp/*.h")

install(FILES ${HEADER_FILES}
        DESTINATION include/ortp
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)


file(GLOB TYPES_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../build/vsx/oRTP/oRTP/*.h")

install(FILES ${TYPES_HEADER_FILES}
        DESTINATION include
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
